--- a/templates/app/blog.html.twig
+++ b/templates/app/blog.html.twig
@@ -13,7 +13,7 @@
    
         <div class="col-md-3 mt-3 px-2">
             <div class="card  p-3" >
-                <img class="img-fluid" src="{{item.image}}" alt="">
+                <img class="img-fluid" src="{{ asset("images/article/" ~ item.image) }}" alt="">
                 <div class="card-body">
                     <h5 class="card-title">{{item.title}}</h5>
                     <div class="metadata my-2">Ecrit le 
